# openclaw-home

./: .env.example  .gitignore  .oxfmtrc.jsonc  README.md  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
graphiti/: config.yaml
mcps/: ollama_search_fetch.py
node/opencode-ajtks/: index.ts
node/opencode-ajtks/src/: index.ts
node/pi-hindsight/: index.ts  package.json
opencode/: opencode.jsonc
opencode/agent/prompt/: title.txt
pi-ajtks/: package.json
pi-ajtks/extensions/: enable-grep.ts  hindsight.ts
pi-ajtks/skills/agent-skills-dev/: SKILL.md
pi-ajtks/skills/agent-skills-dev/assets/: pyrightconfig.json  ruff.toml
pi-ajtks/skills/agent-skills-dev/references/: SPEC_SUMMARY.md
pi-ajtks/skills/agent-skills-dev/scripts/: _common.py  check.py  read_properties.py  scaffold.py  to_prompt.py  validate.py
pi-ajtks/skills/agent-skills-python-dev/: SKILL.md
pi-ajtks/skills/agent-skills-review/: SKILL.md
pi-ajtks/skills/agent-skills-review/references/: REVIEW_CHECKLIST.md
pi-ajtks/skills/agent-skills-review/scripts/: review.py
pi-ajtks/skills/ollama-web-fetch/: SKILL.md
pi-ajtks/skills/ollama-web-fetch/scripts/: fetch.py
pi-ajtks/skills/ollama-web-search/: SKILL.md
pi-ajtks/skills/ollama-web-search/scripts/: search.py
pi-ajtks/skills/pi-ajtks-extension-dev/: SKILL.md
pi-ajtks/skills/pi-ajtks-extension-dev/scripts/: check.py
pi-packages/skill-tool/: README.md  package.json
pi-packages/skill-tool/extensions/: skill-tool.ts
python/log-server/: pyproject.toml
python/log-server/src/log_server/: cli.py  server.py
python/opencode-retainer/: pyproject.toml
python/opencode-retainer/src/opencode_retainer/: cli.py
src/al_jal_ttak_kkal_sen/cli/: hs_api.py  hs_web.py  setup.py
